Proper Reducer support with separate join and add methods.  Defaulted to operator+.  Expanded example4.

--- a/example/example4.yaml
+++ b/example/example4.yaml
@@ -1,6 +1,8 @@
 # example4.yaml
 # Reducer recurrence
-reducer: getToTen
+reducer: 
+    type: getToValue
+    value: 100
 jobs:
     - type: duplicate
     - type: addOne
