Uniformly distribute work by default

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -48,3 +48,17 @@ target_link_libraries(job_stream_neuron
         ${YAML_LIB}/libyaml-cpp.a
         # rt must be last
         rt)
+
+## Stable timing exe
+add_executable(job_stream_stable
+        stable.cpp)
+
+target_link_libraries(job_stream_stable
+        ${CMAKE_SOURCE_DIR}/../build/libjob_stream.a
+        ${BOOST_LIB}/libboost_system.a
+        ${BOOST_LIB}/libboost_thread.a
+        ${BOOST_LIB}/libboost_serialization.a
+        ${BOOST_LIB}/libboost_mpi.a
+        ${YAML_LIB}/libyaml-cpp.a
+        # rt must be last
+        rt)
