Implemented holding onto message rather than forwarding when a child ring is preventing a parent ring test from proceeding; updated stable to highlight inefficiencies (mostly recv time)

--- a/example/stablePipe.yaml
+++ b/example/stablePipe.yaml
@@ -4,18 +4,29 @@
 # TODO - tests should be stdin file (< file), number networks should be
 # config in here.
 
-sleepTime: 20
+sleepTime: 10
 
 input: initSystems
 reducer: 
     type: checkSystems
-    iterations: 20
+    iterations: 5
     recurTo: runSystems
 jobs:
     initSystems:
         type: makeSystems
         to: runSystems
     runSystems:
-        type: evalSystem
+        input: initMoreSystems
         to: output
+        reducer:
+            type: checkSystems
+            iterations: 2
+            recurTo: run
+        jobs:
+            initMoreSystems:
+                type: makeSystems
+                to: run
+            run:
+                type: evalSystem
+                to: output
 
