Halfway commit; working on Sphinx docs and Py3 support.  boost::python segfaults on cleanup with python3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ SET(REQ_LIB
         boost_system
         boost_thread
         boost_serialization
-        boost_mpi)
+        boost_mpi
+        dl)
 
 add_library(job_stream
         job_stream/invoke.cpp
